<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wowwwwwwwwwwwwwwww</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
   
    <string name="menu_settings">Settings</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_shopping_cart_helper">ShoppingCartHelperActivity</string>
    <string name="productdescription">Product Description</string>
    <string name="title_activity_login">Login</string>
    <string name="enterProd">Enter Product</string>
    <string name="enterPrice">Enter Price</string>
    <string name="enterDesc">Enter Description</string>
    <string name="insert">Insert</string>

    <color name="black">#000000</color>
    <color name="green">#13ff00</color>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="email">" Email"</string>
    <string name="login">Log in</string>
    <string name="or">Or</string>
    <string name="register">Register Here</string>
    <string name="title_activity_register">Register</string>
    <string name="Fname">用户名</string>
    <string name="first">请输入用户名</string>
    <string name="Lname">密码</string>
    <string name="lastname">请输入密码</string>
    <string name="registerEmail">Email</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterAdress">Enter Address</string>
    <string name="submit">Submit</string>
    <string name="password01">密码找回问题</string>
    <string name="pass01">请输入密码找回问题</string>
    <string name="title_activity_register_">Register</string>
    <string name="sign">返回</string>
    <string name="address">密码找回答案</string>
    <string name="addre">请输入密码找回答案</string>
    <string name="enteraddress">请输入密码找回答案</string>
    <string name="gologin">注册</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="productcatalog">Product Catalog</string>
    <string name="viewshoppingcart">View Shopping Cart</string>
    <string name="pizzatitle">Pizza Title</string>
    <string name="logout">Log out</string>
    <string name="producttotal">Total Price:</string>
    <string name="pizzaprice">Pizza Price</string>
    <string name="pizzades">Pizza Description</string>
    <string name="currentcart">Current in cart</string>
    <string name="pizzaname">Pizza Name</string>
    <string name="quantity">Quantity</string>
    <string name="setquantity">Set Quantity</string>
    

</resources>
