<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <Button
       android:id="@+id/gobacklogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="32dp"
       android:text="@string/gologin" />

    <Button
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gobacklogin"
        android:layout_marginLeft="42dp"
        android:layout_toRightOf="@+id/gobacklogin"
        android:text="@string/sign" />

    <EditText
        android:id="@+id/Addre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/enteraddress"
        android:inputType="text" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pass01"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:text="@string/password01"
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/Last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t4"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pass01"
        android:layout_marginTop="17dp"
        android:text="@string/address"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fname"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/Fname"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Last"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:text="@string/Lname"
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/first"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pass01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/pass01"
        android:inputType="textPassword" />

</RelativeLayout>
